--- a/0.Global.Foundation/cfg/backend.config
+++ b/0.Global.Foundation/cfg/backend.config
@@ -3,6 +3,6 @@
 # https://developer.hashicorp.com/terraform/language/settings/backends/azurerm #
 ################################################################################
 
-resource_group_name  = "ArtistAnywhere"  # Set to same value in global.tf file as resourceGroupName
+resource_group_name  = "2138disney-rg-dev-westus3-20241119"  # Set to same value in global.tf file as resourceGroupName
 storage_account_name = "xstudio0"        # Set to same value in global.tf file as storage.accountName
 container_name       = "terraform-state" # Set to same value in global.tf file as storage.containerName.terraformState
